<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">Paymon</string>
    <string name="date_format_24h">24 Hour</string>
    <string name="date_format_12h">12 Hour AM/PM</string>
    <string name="profile_edit_failed">Changes were not saved</string>
    <string name="deletion_confirmation">Deletion confirmation</string>
    <string name="delete_participants">Do you want to delete a participant?</string>
    <string name="profile_edit_success">Profile successfully changed</string>
    <string name="reg_phone_correct">Check if the entered phone number is correct</string>
    <string name="pick_image_intent_text">Please Select</string>
    <string name="select_the_recipient">Select a recipient</string>
    <string name="change">Change</string>
    <string name="confirmation_email">Confirmation_email</string>
    <string name="permissions">The application requires permissions: …</string>
    <string name="hide_email">Hide E-mail</string>
    <string name="hide_phone">Hide phone number</string>
    <string name="hide_username">Hide username</string>
    <string name="reset_settings">Reset settings</string>
    <string name="settings_reset">Settings reset</string>
    <string name="double_tap_to_close_the_app">Double tap to close the app</string>
    <string name="ethereum_remittance">Ethereum remittance</string>
    <string name="bitcoin_remittance">Bitcoin remittance</string>
    <string name="paymon_remittance">Paymon remittance</string>
    <string name="keyguard_title">Enter password</string>
    <string name="title_chats">Chats</string>
    <string name="yes">Yes</string>
    <string name="clear">Clear</string>
    <string name="hint">Hint</string>
    <string name="created_group">created a group</string>
    <string name="no_one_selected">No one selected</string>
    <string name="selected_item_count">Selected item count</string>
    <string name="insufficient_rights">Insufficient rights</string>
    <string name="time_to_next_dispatch">Time to next dispatch</string>
    <string name="friend_requests">Friend requests</string>
    <string name="the_balance_of_the_ethereum_wallet_could_not_be_updated">The balance of the Ethereum wallet could not be updated</string>
    <string name="error_in_email">Error in E-mail</string>
    <string name="photo_upload_failed">Photo failed to upload</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="administrators">Administrators</string>
    <string name="leave_group">Leave group</string>
    <string name="black_list">Black list</string>
    <string name="no">No</string>
    <string name="login_or_email_is_empty">Login or E-mail is empty</string>
    <string name="create_ethereum_wallet_failed">Create an Ethereum wallet failed</string>
    <string name="ethereum_wallet_created">Ethereum wallet created</string>
    <string name="bitcoin_wallet_created">Bitcoin wallet created</string>
    <string name="paymon_wallet_created">Paymon wallet created</string>
    <string name="default_denomination_value_eth">2 decimal places</string>
    <string name="money_denomination_auto">Autoformat</string>
    <string name="money_denomination_8">8 decimal places</string>
    <string name="money_denomination_6">6 decimal places</string>
    <string name="money_denomination_4">4 decimal places</string>
    <string name="money_denomination_2">2 decimal places</string>
    <string name="backup_file_not_selected">The file of the purse backup was not selected</string>
    <string name="you_can_not_delete_someone_messages">you can not delete someone messages</string>
    <string name="unable_to_delete_messages">Could not delete messages</string>
    <string name="delete_for_everyone">Delete for all</string>
    <string name="twosome">Twosome</string>
    <string name="groups">Groups</string>
    <string name="global_search">Global search</string>
    <string name="you_did_not_choose_anyone">You did not choose anyone</string>
    <string name="not_specified">Not specified</string>
    <string name="msg_permissions_required">Please provide permissions</string>
    <string name="ok">ОК</string>
    <string name="title_more">More</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_money">Money</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_withdraw">Withdrawal of funds</string>
    <string name="title_games">Games</string>
    <string name="title_settings">Settings</string>
    <string name="title_faq">FAQ</string>
    <string name="exit">Exit</string>
    <string name="profile">Profile</string>
    <string name="enter_a_code">Enter a code</string>
    <string name="reg_name_correct">Name contains invalid characters</string>
    <string name="reg_surname_correct">Surname contains invalid characters</string>
    <string name="reg_check_login">Enter your login</string>
    <string name="reg_check_password">Enter your password</string>
    <string name="reg_check_login_correct">Login contains invalid characters</string>
    <string name="reg_check_password_length">The password is too short</string>
    <string name="check_connected_to_server">No connection to the server</string>
    <string name="update_profile">Edit profile</string>
    <string name="authorization">Authorization</string>
    <string name="action_settings">Settings</string>
    <string name="error_incorrect_double_password">Passwords do not match</string>
    <string name="default_input_hint">Enter your message</string>
    <string name="sign_up_auth">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="repeat_password">Repeat password</string>
    <string name="phone_number">Phone number</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="agreement">Agreement</string>
    <string name="privacy_policy2">Privacy Policy</string>
    <string name="sign_in">Sign in</string>
    <string name="save_button">Save</string>
    <string name="message">Message</string>
    <string name="connecting">Connecting</string>
    <string name="contact_information">Contact information</string>
    <string name="personal_information">Personal information</string>
    <string name="personalization">Personalization</string>
    <string name="change_photo">Change photo</string>
    <string name="status">Status</string>
    <string name="bday">Date of Birth</string>
    <string name="email">E-mail</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="rub">RUB</string>
    <string name="btc">BTC</string>
    <string name="pmnt">PMNT</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_basic">Basic</string>
    <string name="settings_security">Security</string>
    <string name="settings_other">Other</string>
    <string name="settings_about_programm">About program</string>
    <string name="group_invitations">Group invitations</string>
    <string name="notif_messages">Messages</string>
    <string name="notif_do_not_disturb">Do not disturb</string>
    <string name="notif_sound">Sound</string>
    <string name="notif_vibration">Vibration</string>
    <string name="notif_other">Other</string>
    <string name="notif_transactions">Transactions</string>
    <string name="enter_your_email">Enter your E-mail</string>
    <string name="app_sort_friends">Sort friends list</string>
    <string name="security_app">Application security</string>
    <string name="security_password_protect">Security Password</string>
    <string name="security_enter_password">Enter password</string>
    <string name="security_password_protect_summary">Set a password when you sign in to the app</string>
    <string name="search">Search</string>
    <string name="default_sort_friends">By name</string>
    <string name="default_sound">Notice</string>
    <string name="default_sort_surname">By surname</string>
    <string name="default_sort_date">By date added</string>
    <string name="confidentiality">Confidentiality</string>
    <string name="about_program_text">Paymon for Android</string>
    <string name="about_program_text_version">"version %s"</string>
    <string name="export_keys_dialog_mail_intent_failed">Archiving the wallet was an error</string>
    <string name="participants">Participants</string>
    <string name="registration_password_hint">The password must be at least 8 characters in length</string>
    <string name="registration_email">You will receive a confirmation of your registration to your mailbox</string>
    <string name="wallet_create_title">Create a password for your wallet. The operation may take several minutes</string>
    <string name="create_button">Create</string>
    <string name="promotional_code">Invitation code (optional)</string>
    <string name="already_have_an_account">Do you already have an account?</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="email_or_login">E-mail or Login</string>
    <string name="format_time">Format time</string>
</resources>