<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/notif_messages"
        android:key="pref_key_message_sett">
        <SwitchPreferenceCompat
            android:key="switch_notif_worry"
            android:title="@string/notif_do_not_disturb"
            android:defaultValue="false"/>
        <Preference
            android:key="notif_sound"
            android:title="@string/notif_sound"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:defaultValue="@string/default_sound"/>
        <SwitchPreferenceCompat
            android:key="switch_notif_vibration"
            android:title="@string/notif_vibration"
            android:defaultValue="true"/>
        <!--<SwitchPreference-->
        <!--android:key="switch_notif_pop_up"-->
        <!--android:title="@string/notif_pop_up_notif"-->
        <!--android:defaultValue="true"-->
        <!--android:enabled="false"/>-->
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_other_sett"
        android:title="@string/notif_other">
        <SwitchPreferenceCompat
            android:key="switch_notif_transactions"
            android:title="@string/notif_transactions"
            android:defaultValue="true"/>
        <!--<SwitchPreference-->
        <!--android:key="switch_notif_invite_to_friend"-->
        <!--android:title="@string/notif_invite_to_friend"-->
        <!--android:defaultValue="true"/>-->
        <!--<SwitchPreference-->
        <!--android:key="switch_notif_invite_to_group"-->
        <!--android:title="@string/notif_invite_to_group"-->
        <!--android:defaultValue="true"/>-->
        <!--<SwitchPreference-->
        <!--android:key="switch_notif_games"-->
        <!--android:title="@string/notif_games"-->
        <!--android:defaultValue="false"-->
        <!--android:enabled="false"/>-->

    </PreferenceCategory>
</PreferenceScreen>