<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/default_sort_friends"
        android:entries="@array/sort_friends_list"
        android:entryValues="@array/sort_friends_list"
        android:key="basic_sort_friends_list"
        android:title="@string/app_sort_friends" />
    <ListPreference
        android:defaultValue="@string/date_format_24h"
        android:entries="@array/format_time"
        android:entryValues="@array/format_time"
        android:key="CLIENT_BASIC_DATE_FORMAT_LIST"
        android:title="@string/format_time" />

    <PreferenceCategory
        android:key="MESSAGES_CONF_CATEGORY"
        android:title="Конфеденциальность">
        <SwitchPreference
            android:defaultValue="false"
            android:key="CLIENT_CONF_HIDE_EMAIL_SWITCH"
            android:title="Скрыть E-mail" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="CLIENT_CONF_HIDE_PHONE_SWITCH"
            android:title="Скрыть телефон" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="CLIENT_CONF_HIDE_NAME_SWITCH"
            android:title="Скрыть имя пользователя" />
    </PreferenceCategory>
</PreferenceScreen>