<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_application_sett"
        android:title="@string/app_title">
        <ListPreference
            android:defaultValue="@string/default_sort_friends"
            android:entries="@array/sort_friends_list"
            android:entryValues="@array/sort_friends_list"
            android:key="basic_sort_friends_list"
            android:title="@string/app_sort_friends" />
        <ListPreference
            android:defaultValue="@string/default_sort_friends"
            android:entries="@array/format_time"
            android:entryValues="@array/format_time"
            android:key="basic_format_time"
            android:title="@string/format_time" />
    </PreferenceCategory>
</PreferenceScreen>